--- a/dev/config2.yml
+++ b/dev/config2.yml
@@ -1,4 +1,4 @@
-destination: dev/ads2.txt
+destination: ./path/to/ads2.txt
 sources:
   - https://poki.com/ads.txt
   - https://adinplay.com/ads.txt
