Rewrite ads.txt when it changes

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -30,6 +30,9 @@
 			"exclude": [
 				".denoTypes"
 			]
+		},
+		"rules": {
+			"exclude": ["require-await"]
 		}
 	},
 	"importMap": "importmap.json"
