--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,3 +24,8 @@ jobs:
       - name: Build
         run: deno task build --all
 
+      - name: List files
+        run: |
+          ls
+          cd dist
+          ls
